refactor html using js

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>Available for work</p>
 
             <div class="cv-container">
-              <a href="/data/frontend-dev.pdf" target="_blank" class="cv-btn"
+              <a href="/data/webdev.pdf" target="_blank" class="cv-btn"
                 >Resume</a
               >
             </div>
@@ -93,7 +93,7 @@
             <!-----------------------------Skills-------------------------->
             <div class="skills about-column">
               <div class="skill-container reveal">
-                <div class="skill-column">
+                <!-- <div class="skill-column">
                   <i class="fa-brands fa-html5"></i>
                   <p>HTML</p>
                 </div>
@@ -116,11 +116,11 @@
                 <div class="skill-column">
                   <i class="fa-brands fa-git-alt"></i>
                   <p>Git</p>
-                </div>
-                <div class="skill-column">
+                </div> -->
+                <!-- <div class="skill-column">
                   <i class="fa-brands fa-react"></i>
                   <p>React</p>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
