change color, change layout

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
           <div class="intro-content">
             <h1>Hello,<span class="orange-text"> I'm Visay</span></h1>
-            <p>I am a Frontend Developer</p>
+            <p>Frontend Developer</p>
             <p>I build responsive user interfaces</p>
             <p>Available for work</p>
 
@@ -82,46 +82,15 @@
             <div class="about-me-content about-column reveal">
               <h1>ABOUT ME</h1>
               <p>
-                My name is Visay Vang, I am a self-taught developer. I could
-                take a sketch and turn it into a beautiful design with code. I
-                understand that this is a life long learning career because of
-                technology constantly growing and evolving. This is something
-                that I love to do and is up for the challenge.
+                Hi, I'm Visay Vang, I'm located in Anderson, SC. I can take a
+                design and code it with HTML, CSS, and JavaScript. I am
+                passionate about at what I do.
               </p>
               <button id="read-more-btn" class="read-btn">Read more...</button>
             </div>
             <!-----------------------------Skills-------------------------->
             <div class="skills about-column">
-              <div class="skill-container reveal">
-                <!-- <div class="skill-column">
-                  <i class="fa-brands fa-html5"></i>
-                  <p>HTML</p>
-                </div>
-                <div class="skill-column">
-                  <i class="fa-brands fa-css3-alt"></i>
-                  <p>CSS</p>
-                </div>
-                <div class="skill-column">
-                  <i class="fa-brands fa-sass"></i>
-                  <p>Sass</p>
-                </div>
-                <div class="skill-column">
-                  <i class="fa-brands fa-bootstrap"></i>
-                  <p>Bootstrap</p>
-                </div>
-                <div class="skill-column">
-                  <i class="fa-brands fa-js"></i>
-                  <p>JavaScript</p>
-                </div>
-                <div class="skill-column">
-                  <i class="fa-brands fa-git-alt"></i>
-                  <p>Git</p>
-                </div> -->
-                <!-- <div class="skill-column">
-                  <i class="fa-brands fa-react"></i>
-                  <p>React</p>
-                </div> -->
-              </div>
+              <div class="skill-container reveal"></div>
             </div>
           </div>
         </div>
@@ -138,20 +107,19 @@
 
           <div class="paragraph">
             <p>
-              My journey into code was an unexpected one. I came from a
-              non-traditional background working as a CNC Machinist. I wanted to
-              further my career as a machinist by learning G codes and came
-              across software development.
+              My journey into code was an unexpected one. I worked as a CNC
+              Machinist working with low level code. With my eagerness to learn
+              and grow at my workplace I stumble across software development.
+              After much research I decided to embarked on a self-taught journey
+              by purchasing my first JavaScript book "Eloquent JavaScript" and
+              taking online courses like freecodecamp, odinproject, udemy, and
+              scrimba.
             </p>
-            <p>
-              I hesitated to pursued at first because of intimidation, but after
-              doing much research it changed my mind. I dove into it and coded
-              my first "Hello World" in JavaScript and was immediately hooked. I
-              knew this is a career I would love to do.
-            </p>
+
             <p>
               Outside from code, I love to spend time with my family and hangout
-              with friends. I like to watch football, basketball and soccer.
+              with friends. I like to play soccer and basketball. I like to
+              bible study and get involve with church activities.
             </p>
           </div>
         </div>
