add hover to button

--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
             <div class="about-me-content about-column reveal">
               <h1>ABOUT ME</h1>
               <p>
-                Hi, I'm Visay Vang, I'm located in Anderson, SC. I can take a
-                design and code it with HTML, CSS, and JavaScript. I am
-                passionate about at what I do.
+                Hi, I'm Visay Vang, I'm passionate about problem solving and
+                building responsive user-friendly interfaces.
               </p>
               <button id="read-more-btn" class="read-btn">Read more...</button>
             </div>
