change color, add project, add img

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>Available for work</p>
 
             <div class="cv-container">
-              <a href="/data/webdev.pdf" target="_blank" class="cv-btn"
+              <a href="/data/frontend.pdf" target="_blank" class="cv-btn"
                 >Resume</a
               >
             </div>
@@ -210,13 +210,7 @@
       </div>
     </section>
     <!--End Contact Form-->
-    <!--Back to top-->
-    <div class="back-to-top">
-      <a href="#"
-        ><i class="fa-solid fa-arrow-up-from-bracket"></i> Back to Top</a
-      >
-    </div>
-    <!--End back to top-->
+
     <!--Footer-->
     <footer class="footer" id="contact">
       <div class="wrapper">
@@ -224,6 +218,11 @@
           <div class="contact footer-col">
             <p><i class="fa-solid fa-phone"></i> 414-243-4862</p>
             <p><i class="fa-regular fa-envelope"></i> vsvang@gmail.com</p>
+          </div>
+          <div class="back-to-top .footer-col">
+            <a href="#"
+              ><i class="fa-solid fa-arrow-up-from-bracket"></i> Back to Top</a
+            >
           </div>
           <div class="icons footer-col">
             <a href="https://github.com/" target="_blank">
