add project, change title, add img

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <!--End of Banner Section-->
       <section class="section-6 section">
         <div class="wrapper">
-          <h1>MORE PROJECTS</h1>
+          <h1>LANDING PAGE</h1>
           <div class="mini-project-content" id="more-project-container">
             <!--Display Last 3 Projects-->
           </div>
